// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  background-color: var(--bb-palette-white, #ffffff);
  border-radius: 6px;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em 0.4em 0.8em;
  position: unset;
}

.emotion-8.emotion-8:focus,
.emotion-8[aria-expanded='true'] {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-4 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-4 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-4 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-4 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-4 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-4 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;

exports[`overrides styles.base should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  background-color: var(--bb-palette-white, #ffffff);
  border-radius: 6px;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em 0.4em 0.8em;
  position: unset;
}

.emotion-8.emotion-8:focus,
.emotion-8[aria-expanded='true'] {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-2 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-2 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-2 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-2 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  background-color: var(--bb-palette-white, #ffffff);
  border-radius: 6px;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em 0.4em 0.8em;
  position: unset;
}

.emotion-8.emotion-8:focus,
.emotion-8[aria-expanded='true'] {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-2 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-2 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-2 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-2 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  background-color: var(--bb-palette-white, #ffffff);
  border-radius: 6px;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em 0.4em 0.8em;
  position: unset;
}

.emotion-8.emotion-8:focus,
.emotion-8[aria-expanded='true'] {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-4 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-4 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-4 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-4 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-4 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-4 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;

exports[`sizes should render large correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  background-color: var(--bb-palette-white, #ffffff);
  border-radius: 6px;
  font-size: 1.5rem;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em 0.4em 0.8em;
  position: unset;
}

.emotion-8.emotion-8:focus,
.emotion-8[aria-expanded='true'] {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="bb-id-5"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-2 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-2 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-2 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-2 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="bb-id-5"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;

exports[`sizes should render medium correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  background-color: var(--bb-palette-white, #ffffff);
  border-radius: 6px;
  font-size: 1.25rem;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em 0.4em 0.8em;
  position: unset;
}

.emotion-8.emotion-8:focus,
.emotion-8[aria-expanded='true'] {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="bb-id-5"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-2 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-2 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-2 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-2 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="bb-id-5"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;

exports[`sizes should render small correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  background-color: var(--bb-palette-white, #ffffff);
  border-radius: 6px;
  font-size: 0.875rem;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em 0.4em 0.8em;
  position: unset;
}

.emotion-8.emotion-8:focus,
.emotion-8[aria-expanded='true'] {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="bb-id-5"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-2 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-2 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-2 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-2 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="bb-id-5"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;

exports[`theming styles.base should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  background-color: var(--bb-palette-white, #ffffff);
  border-radius: 6px;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em 0.4em 0.8em;
  position: unset;
}

.emotion-8.emotion-8:focus,
.emotion-8[aria-expanded='true'] {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-2 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-2 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-2 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-2 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  width: 100%;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--bb-palette-undefined, #000000);
  height: 2.75em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  position: relative;
  width: 100%;
  position: unset;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  background: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-8[disabled]+.bb-Icon {
  color: var(--bb-palette-gray400, #000000);
  fill: var(--bb-palette-gray400, #000000);
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  position: unset;
}

.emotion-8 {
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8.emotion-8 {
  position: relative;
}

.emotion-8[aria-expanded="true"] {
  position: unset;
}

.emotion-11 {
  color: var(--bb-palette-gray300, #000000);
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-15.emotion-15.emotion-15>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-18 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-23 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-23[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-23:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-25 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-26.emotion-26.emotion-26 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SelectMenu"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-SelectMenuButtonWrapper bb-Box"
  >
    <div
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="emotion-1 emotion-2 emotion-8 bb-SelectMenuButton bb-Box"
      loop=""
      role="button"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-11 bb-SelectMenuButtonText bb-Box"
      >
        Search for a fruit...
      </div>
      <div
        class="emotion-1 emotion-2 emotion-14 bb-SelectMenuButtonIconsWrapper bb-Box"
      >
        <div
          class="emotion-15 emotion-1 emotion-2 bb-Box bb-Set"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-2 emotion-21 bb-SelectMenuButtonIcon bb-Box bb-Icon"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-22 emotion-23 emotion-1 emotion-25 emotion-26 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  />
</div>
`;
